k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sign-language-app
  labels:
    name: sign-language-app
