k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sign-language-app-service
  namespace: sign-language-app
  labels:
    app: sign-language-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: sign-language-app
